added tests + pre-commit

--- a/templates/admin/shop/product_change_form.html
+++ b/templates/admin/shop/product_change_form.html
@@ -33,4 +33,4 @@
 
     document.getElementById("id_shop").addEventListener("change", updateCategories);
   </script>
-{% endblock %}
+{% endblock content %}
